fix: adjust link alignment

--- a/frontend/src/app/profile-pages/components/contact/contact.component.scss
+++ b/frontend/src/app/profile-pages/components/contact/contact.component.scss
@@ -21,7 +21,7 @@
       color: inherit;
       display: flex;
       gap: $spacing-1;
-      text-align: center;
+      text-align: left;
     }
 
     .info-wrapper {
